@@ -1,3 +1,6 @@
+Changes since 0.2.8.3_rc3:
+- RESERVE_SCREEN_NAME now works regardless of the ALLOW_IMPOSTOR setting.
+
 Changes since 0.2.8.3_rc2:
 - Fixed crash with server polling
 - ROUND_WINNER and MATCH_WINNER logged to ladderlog
